--- a/ext4/ext4.csproj
+++ b/ext4/ext4.csproj
@@ -2353,6 +2353,7 @@
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
+    <Content Include="Tree.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -2406,6 +2407,16 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
+    <Compile Include="Tree.aspx.cs">
+      <DependentUpon>Tree.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tree.aspx.designer.cs">
+      <DependentUpon>Tree.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebService.ashx.cs">
+      <DependentUpon>WebService.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Window.aspx.cs">
       <DependentUpon>Window.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2423,6 +2434,7 @@
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="check-nodes.aspx" />
     <None Include="extjs\examples\app\feed-viewer\app.jsb3" />
     <None Include="extjs\examples\app\feed-viewer\feed-proxy.php" />
     <None Include="extjs\examples\app\nested-loading\app.jsb3" />
@@ -2566,6 +2578,7 @@
     <None Include="extjs\resources\themes\templates\resources\sass\my-ext-theme.scss" />
     <None Include="extjs\src\core\test\unit\build.sh" />
     <None Include="extjs\src\core\test\unit\spec\Ext-mess.backup" />
+    <Content Include="WebService.ashx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -2575,7 +2588,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>2321</DevelopmentServerPort>
+          <DevelopmentServerPort>9557</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
