--- a/trunk/ext4/Web.config
+++ b/trunk/ext4/Web.config
@@ -6,6 +6,9 @@
   -->
 
 <configuration>
+  <appSettings>
+    <add key="App" value="server=(local);database=ExpressDB;uid=sa;pwd=123"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
