--- a/ext4/ext4.csproj
+++ b/ext4/ext4.csproj
@@ -54,6 +54,7 @@
     <Content Include="CheckboxRadio.aspx" />
     <Content Include="ComboBox.aspx" />
     <Content Include="CustomformField.aspx" />
+    <Content Include="Default.html" />
     <Content Include="extjs\bootstrap.js" />
     <Content Include="extjs\examples\app\feed-viewer\app.js" />
     <Content Include="extjs\examples\app\feed-viewer\app\controller\Articles.js" />
