--- a/trunk/ext4/ext4.csproj
+++ b/trunk/ext4/ext4.csproj
@@ -1115,6 +1115,7 @@
     <Content Include="extjs\ext-all-debug.js" />
     <Content Include="extjs\ext-all.js" />
     <Content Include="extjs\ext-debug.js" />
+    <Content Include="extjs\js\layout.js" />
     <Content Include="extjs\locale\ext-lang-zh_CN.js" />
     <Content Include="extjs\resources\css\ext-all-access.css" />
     <Content Include="extjs\resources\css\ext-all-scoped.css" />
@@ -2548,7 +2549,6 @@
     <Folder Include="Data\faq\" />
     <Folder Include="Data\file\" />
     <Folder Include="Data\news\" />
-    <Folder Include="extjs\js\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
