--- a/trunk/ext4/ext4.csproj
+++ b/trunk/ext4/ext4.csproj
@@ -1115,6 +1115,7 @@
     <Content Include="extjs\ext-all-debug.js" />
     <Content Include="extjs\ext-all.js" />
     <Content Include="extjs\ext-debug.js" />
+    <Content Include="extjs\js\dragdropzones.js" />
     <Content Include="extjs\js\layout.js" />
     <Content Include="extjs\locale\ext-lang-zh_CN.js" />
     <Content Include="extjs\resources\css\ext-all-access.css" />
@@ -2361,6 +2362,7 @@
     <Content Include="FormswithvBoxlayout.aspx" />
     <Content Include="Formwithabsolutelayout.aspx" />
     <Content Include="Index.html" />
+    <Content Include="Layout.html" />
     <Content Include="MessageBox.aspx" />
     <Content Include="Multiselect.aspx" />
     <Content Include="NumberFieldExample.aspx" />
